# nvidia-nemo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.copilot/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  contributing.md  guardrails-examples.md  nemo-guardrails-overview.md  project-plan.md
examples/: basic_guardrails.py
src/nemo_guardrails/: __init__.py  config.py  conversation.py  engine.py  models.py  protection_examples.py
